Fix colors for better readability

--- a/public/styles/responsive-design.css
+++ b/public/styles/responsive-design.css
@@ -16,8 +16,8 @@
     margin-left: 1.5em;
     margin-right: 1.5em;
     height: 400px;
-    background-color: #ffe96b;
-    color: #4056A1;
+    background-color: #ffdb27;
+    color: #092581;
   }
 
   .container {
